--- a/src/main/resources/seed/roles/software-architect.yaml
+++ b/src/main/resources/seed/roles/software-architect.yaml
@@ -24,3 +24,24 @@ requirements:
   - { skill: ArchiMate, category: Architecture Frameworks, level: decent }
   - { skill: iSAQB, category: Architecture Frameworks, level: excellent }
   - { skill: TOGAF, category: Architecture Frameworks, level: basic }
+  - { skill: Security Architecture, category: Security, level: excellent }
+  - { skill: Authentication & Authorization, category: Security, level: excellent }
+  - { skill: Security Patterns, category: Security, level: excellent }
+  - { skill: Data Architecture, category: Data & Integration, level: excellent }
+  - { skill: NoSQL Databases, category: Data & Integration, level: good }
+  - { skill: Integration Patterns, category: Data & Integration, level: excellent }
+  - { skill: Message Brokers, category: Data & Integration, level: good }
+  - { skill: Event-Driven Architecture, category: Data & Integration, level: excellent }
+  - { skill: Domain-Driven Design, category: Advanced Architecture, level: excellent }
+  - { skill: Resilience Patterns, category: Advanced Architecture, level: excellent }
+  - { skill: Performance & Scalability, category: Advanced Architecture, level: excellent }
+  - { skill: Observability & Monitoring, category: Advanced Architecture, level: excellent }
+  - { skill: Architecture Documentation, category: Advanced Architecture, level: excellent }
+  - { skill: Event Sourcing & CQRS, category: Advanced Architecture, level: good }
+  - { skill: Clean Architecture, category: Advanced Architecture, level: excellent }
+  - { skill: Infrastructure as Code, category: DevOps & Infrastructure, level: good }
+  - { skill: Service Mesh, category: DevOps & Infrastructure, level: good }
+  - { skill: Strategic Thinking, category: Soft Skills, level: good }
+  - { skill: Risk Management, category: Soft Skills, level: good }
+  - { skill: Conflict Resolution, category: Soft Skills, level: good }
+  - { skill: Docker, category: DevOps & Infrastructure, level: good }
